# kafka-rust

./: Cargo.toml
examples/: example-ssl.rs
src/: producer.rs
src/client/: mod.rs  network.rs
src/consumer/: builder.rs
